Fix chart styling issues and workaround the legend overlap bug

--- a/frontend/src/Monitor/Charts/Science/Science.css
+++ b/frontend/src/Monitor/Charts/Science/Science.css
@@ -6,12 +6,12 @@
 }
 
 .scienceTotal {
-    font-size: 1vw;
+    font-size: 0.8vw;
     color: #0b9cbd;
 }
 
 .scienceTotalNumber {
-    font-size: 0.9vw;
+    font-size: 0.75vw;
     color: #65c73c;
 }
 
